--- a/kubedeploy.yaml
+++ b/kubedeploy.yaml
@@ -1,10 +1,9 @@
-
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: server-cakewars
+  name: server-lobby-cakewars
   labels:
-    app: server-cakewars
+    app: server-lobby-cakewars
     type: spigot
   namespace: servers
 spec:
@@ -14,11 +13,11 @@ spec:
   template:
     metadata:
       labels:
-        app: server-cakewars
+        app: server-lobby-cakewars
     spec:
       containers:
-      - name: server-cakewars
-        image: exorath/server-cakewars
+      - name: server-lobby-cakewars
+        image: exorath/server-lobby-cakewars
         ports:
         - containerPort: 25565
           protocol: TCP
