--- a/architect.yml
+++ b/architect.yml
@@ -31,6 +31,6 @@ handlers:
       allMaps:
         type: single
         address: "http://localhost:8080"
-        userId: exorathv1
+        userId: test
         mapId: hub.iw
         envId: prod
