--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ script:
     docker build --network host --build-arg GITHUB_OAUTH=${GITHUB_OAUTH} --build-arg AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} --build-arg AWS_SECRET_KEY=${AWS_SECRET_KEY} --build-arg EULA=${EULA} --build-arg AWS_REGION=${AWS_REGION}  -t build-image . ;
     docker create --name=build-container build-image cat;
     docker cp build-container:/usr/src/mcserver/. ./mcserver && docker cp build-container:/usr/bin/startserver ./mcserver;
-    docker build -f Dockerfile.release -t exorath/server-cakewars:${version} .
+    docker build -f Dockerfile.release -t exorath/server-lobby-cakewars:${version} .
 after_success:
   - if [ -n "$TRAVIS_TAG" ]; then
     docker login -u=exorath -p="$DOCKER_PASSWORD";
     echo "version $TRAVIS_TAG" ;
-    docker push "exorath/server-cakewars:$TRAVIS_TAG" ;
+    docker push "exorath/server-lobby-cakewars:$TRAVIS_TAG" ;
     fi 
