--- a/architect.yml
+++ b/architect.yml
@@ -16,6 +16,11 @@ handlers:
           env: GITHUB_OAUTH
         name: exorath/ExoBasePlugin
         jar: ExoBasePlugin-(.*).jar
+      KitsPlugin:
+        oauth:
+          env: GITHUB_OAUTH
+        name: exorath/KitsPlugin
+        jar: KitsPlugin-(.*).jar
   amazons3:
     jar:
       bucketName: exospigot
