--- a/architect.yml
+++ b/architect.yml
@@ -21,6 +21,11 @@ handlers:
           env: GITHUB_OAUTH
         name: exorath/KitsPlugin
         jar: KitsPlugin-(.*).jar
+      ExoHUD:
+        oauth:
+          env: GITHUB_OAUTH
+        name: exorath/ExoHUD
+        jar: ExoHUD(.*).jar
   amazons3:
     jar:
       bucketName: exospigot
