--- a/server.properties
+++ b/server.properties
@@ -7,7 +7,7 @@ broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
 difficulty=0
-spawn-monsters=true
+spawn-monsters=false
 op-permission-level=4
 announce-player-achievements=true
 pvp=true
@@ -22,12 +22,12 @@ max-world-size=29999984
 server-port=25565
 debug=false
 server-ip=
-spawn-npcs=true
+spawn-npcs=false
 allow-flight=false
 level-name=world
 view-distance=16
 resource-pack=
-spawn-animals=true
+spawn-animals=false
 white-list=false
 generate-structures=true
 online-mode=false
