--- a/architect.yml
+++ b/architect.yml
@@ -26,6 +26,11 @@ handlers:
           env: GITHUB_OAUTH
         name: exorath/ExoHUD
         jar: ExoHUD(.*).jar
+      LobbyStatsPlugin:
+        oauth:
+          env: GITHUB_OAUTH
+        name: exorath/LobbyStatsPlugin
+        jar: LobbyStatsPlugin(.*).jar
   amazons3:
     jar:
       bucketName: exospigot
