--- a/architect.yml
+++ b/architect.yml
@@ -31,6 +31,11 @@ handlers:
           env: GITHUB_OAUTH
         name: exorath/LobbyStatsPlugin
         jar: LobbyStatsPlugin(.*).jar
+      ExoMenus
+        oauth:
+          env: GITHUB_OAUTH
+        name: exorath/ExoMenus
+        jar: ExoMenus(.*).jar
   amazons3:
     jar:
       bucketName: exospigot
